<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/rgJoints">
            <RadioButton
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/elbow"
                    android:id="@+id/rbElbow"
                    android:checked="true" android:layout_weight="1"/>
            <RadioButton
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/wrist"
                    android:id="@+id/rbWrist"
                    android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="328dp" android:layout_gravity="center_horizontal" android:layout_weight="0.24">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up"
                android:id="@+id/btUp" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:id="@+id/btLeft" android:layout_centerVertical="true" android:layout_alignParentStart="true"
                android:layout_marginStart="38dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down"
                android:id="@+id/btDown"
                android:layout_marginBottom="47dp" android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:id="@+id/btRight"
                android:paddingRight="20dp" android:layout_alignTop="@+id/btLeft" android:layout_alignParentEnd="true"
                android:layout_marginEnd="33dp"/>
    </RelativeLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grabopen"
            android:id="@+id/btGrabOpen" android:padding="20dp" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grabclose"
            android:id="@+id/btGrabClose" android:layout_gravity="center_horizontal" android:padding="20dp"/>
</LinearLayout>