<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical" >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pairedDevices"
                android:id="@+id/tvPairedDevices" style="?android:attr/listSeparatorTextViewStyle"
                android:visibility="gone"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lvPairedDevices" android:headerDividersEnabled="false"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availableDevices"
                android:id="@+id/tvAvailableDevices" style="?android:attr/listSeparatorTextViewStyle"
                android:visibility="gone"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lvAvailableDevices"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/bFindDevices"
            style="@android:style/Widget.Holo.Button.Borderless.Small"/>

</LinearLayout>