<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/accelerometer"
                android:id="@+id/tvAcce" android:layout_weight="1" style="?android:attr/listSeparatorTextViewStyle"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/tvX" android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/tvY" android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/tvLeft" android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/tvRight" android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/rgJoints">
            <RadioButton
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/elbow"
                android:id="@+id/rbElbow" android:layout_weight="1" android:checked="true"/>
            <RadioButton
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/wrist"
                android:id="@+id/rbWrist" android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dip" android:layout_weight="1">
        <com.CS413BluetoothController.activities.AccelView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/svLine"
        />
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView" android:src="@drawable/circle"
                android:contentDescription="@string/circle"/>
    </FrameLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/btStart"/>
</LinearLayout>